Document PPDG/src/objects/Covenant_Information__c.object
<CustomObject>
    <fields>
        <fullName>CPF_Customer_Name__c</fullName>
        <formula>Opportunity__r.CPF_Customer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPF Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Covenant_Clause__c</fullName>
        <formula>Opportunity__r.Covenant_Clause__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covenant Clause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSCR_Actual__c</fullName>
        <label>%FSCR Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSCR_Calculation__c</fullName>
        <label>FSCR Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSCR_Covenant__c</fullName>
        <label>%FSCR Covenant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSCR_Met_Breached__c</fullName>
        <globalPicklist>CPF_Met_Breached</globalPicklist>
        <label>FSCR Met/Breached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FTV_Actual__c</fullName>
        <label>%FTV Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTV_Covenant__c</fullName>
        <label>%FTV Covenant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTV_Met_Breached__c</fullName>
        <globalPicklist>CPF_Met_Breached</globalPicklist>
        <label>FTV Met/Breached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FTV_calculation__c</fullName>
        <label>FTV calculation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Valuation_Completed_Date__c</fullName>
        <label>Last Valuation Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Covenant_Due_Date__c</fullName>
        <label>Next Covenant Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Covenant_Testing_Date__c</fullName>
        <label>Next Covenant Testing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_FSCR_Covenant_Review_Date__c</fullName>
        <label>Next FSCR Covenant Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_PCR_Covenant_Review_Date__c</fullName>
        <label>Next PCR Covenant Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Covenant Information</relationshipLabel>
        <relationshipName>Covenant_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Covenants_Date__c</fullName>
        <label>Other Covenants Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Covenants__c</fullName>
        <label>Other Covenants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCR_Actual__c</fullName>
        <label>%PCR Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCR_Calculation__c</fullName>
        <label>PCR Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCR_Met_Breached__c</fullName>
        <globalPicklist>CPF_Met_Breached</globalPicklist>
        <label>PCR Met/Breached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCR_covenant__c</fullName>
        <label>%PCR covenant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Covenant_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Covenant_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valuation_Amount__c</fullName>
        <label>Valuation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Covenant Information</label>
    <nameField>
        <label>Covenant Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covenant Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>